# dexter-vault

./: .gitignore  ARCHITECTURE.md  Anchor.toml  README.md  SECURITY.md  package-lock.json  package.json  prove-passkey-mainnet.mjs  tsconfig.json
docs/: ALPHA-TO-ZETA.md  CSUITE-THREAD-2026-06-06.md  DESIGN-vault-v2-session-keys.md  FINDINGS-lock-overcommit-test.md  FINDINGS-rent-recovery.md  OTS-PROOF-OF-CONTROL-NOTES.md  OTS-STANDARDS-PROPOSAL.md  OTS-TECHNICAL-BRIEF.md  PICKUP-2026-06-07-DECK-NIGHT.md  PICKUP-EXAMPLE-bigger-than-defi.md  PICKUP-EXAMPLE-how-agent-credit-works.md  PICKUP-EXAMPLE-why-agents-stream.md  PICKUP-VC-ASSAULT.md  WHY-THIS-IS-DIFFERENT.md
docs/superpowers/: COMBINED-PHASE-1-DEPLOY-CHECKLIST.md  PICKUP-2026-06-05-credex-metering.md  PICKUP-2026-06-06-phase1-complete.md  PICKUP-2026-06-07-credit-l2-phaseA-complete.md
docs/superpowers/plans/: 2026-06-02-revolving-capacity-meter.md  2026-06-05-migrate-v3-to-v4.md  2026-06-07-credit-l2-standby-financier.md
programs/dexter-vault/: Cargo.toml
programs/dexter-vault/src/: constants.rs  lib.rs  state.rs  swig_compat.rs
programs/dexter-vault/src/instructions/: close_session.rs  close_standby.rs  draw_credit.rs  finalize_withdrawal.rs  force_release.rs  initialize_vault.rs  lock_voucher.rs  migrate_legacy_to_v6.rs  migrate_v2_to_v3.rs  migrate_v3_to_v4.rs  migrate_v4_to_v5.rs  migrate_v5_to_v6.rs  mod.rs  open_standby.rs  prove_passkey.rs  recover_abandoned_lock.rs  register_session_key.rs  repay_credit.rs  request_withdrawal.rs  revoke_session_key.rs  rotate_dexter_authority.rs  rotate_passkey.rs  seize_collateral.rs  set_standby_reserve.rs  set_swig.rs  set_swig_atomic.rs  settle_locked_voucher.rs  settle_tab_voucher.rs  settle_voucher.rs  transfer_lock_ownership.rs
programs/dexter-vault/src/verify/: ed25519.rs  mod.rs  webauthn.rs
scripts/: migrate-fleet.ts
tests/: canary-fee-split.ts  close-session.ts  credit-antirug.ts  credit-lifecycle.ts  dexter-authority.ts  dexter-vault.ts  drain-attempt.ts  enroll-test-vault.ts  finalize-withdrawal-reservation.ts  initialize-vault.ts  lock-voucher.ts  locked-claim-settle.ts  migrate-legacy.ts  migrate-v3-to-v4.ts  migrate-v5-to-v6.ts  multisession-lifecycle.ts  multisession-overcommit.ts  multisession-replace.ts  multisession-withdrawal.ts  prove-leg2-e2e.ts  prove-passkey.ts  prove-sdk-credit.ts  prove-sdk-v6.ts  recover-abandoned-lock.ts  register-session-key.ts  register-session-overcommit.ts  revolving-meter.ts  rotation.ts  set-swig-atomic.ts  set-swig.ts  settle-voucher.ts  standby-reserve.ts  swig-settle-flow.ts  transfer-lock-ownership.ts  withdrawal-flow.ts  xor-tab-then-lock.ts
tests/helpers/: credit.ts  locked-claim.ts  register-bootstrap.ts  secp256r1.ts  session.ts  settle.ts  standby-reserve.ts
