[package]
name = "dexter-vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dexter_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"
solana-sha256-hasher = "2.3.0"

# Swig CPI client — pinned to commit c2e8eb4dc5 (workspace v1.4.0, 2026-01-05),
# the latest swig-wallet revision that still uses solana-sdk 2.x (matches
# anchor-lang 0.32.1's transitive deps). The post-v1.4 main branch bumped to
# solana-sdk 3.0 which conflicts with anchor 0.32 and has an upstream
# internal version skew. v1.4.0 includes ProgramExec authority (added 2026-01-03)
# which is required for our roles 1 & 3 markers. See plan:
# docs/superpowers/plans/2026-06-04-set-swig-atomic.md Task 2.
swig-interface = { git = "https://github.com/anagrambuild/swig-wallet.git", rev = "c2e8eb4dc564c52a27cfcb9ed534db14c350c6c6", default-features = false }
swig-state     = { git = "https://github.com/anagrambuild/swig-wallet.git", rev = "c2e8eb4dc564c52a27cfcb9ed534db14c350c6c6", default-features = false }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
