[package]
name = "dexter-vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dexter_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
# init-if-needed enabled for set_standby_reserve's StandbyBacker PDA. This feature
# has a known re-init footgun — any NEW use of init_if_needed must guard the init
# body with a version/discriminator check + a deterministic PDA seed (see
# set_standby_reserve.rs for the pattern) so a second call cannot reset state.
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
solana-sha256-hasher = "2.3.0"

# Swig wire-format types only — NOT swig-interface (which drags in solana-sdk
# and a getrandom-tainted dep chain). swig-state is built on pinocchio and is
# SBF-clean. We use its CreateV1Args / AddAuthorityV1Args / AuthorityType /
# ClientAction structs for the byte layout, and hand-build the Instruction
# manually in our handler using solana_program::instruction (already pulled
# in transitively via anchor-lang).
swig-state = { git = "https://github.com/anagrambuild/swig-wallet.git", rev = "c2e8eb4dc564c52a27cfcb9ed534db14c350c6c6", default-features = false }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
